@@ -1,8 +1,11 @@
 """
 Classes for grouping different elements.
 """
-import diacanvas
+
 import itertools
+
+import gobject
+import diacanvas
 
 class GroupBase(diacanvas.CanvasGroupable):
     """
@@ -56,3 +59,13 @@ class GroupBase(diacanvas.CanvasGroupable):
     def on_groupable_iter(self):
         return self.get_children()
 
+
+class Groupable(gobject.GObjectMeta):
+    """
+    Metaclass for groupable diagram item classes.
+    """
+    def __new__(cls, name, bases, data):
+        c = gobject.GObjectMeta.__new__(cls, name, bases, data)
+        gobject.type_register(c)
+        diacanvas.set_groupable(c)
+        return c
